--- a/css/style.css
+++ b/css/style.css
@@ -4,29 +4,37 @@
     box-sizing: border-box;
 }
 body{
-    background-color: black;
+    background-color: white;
+    font-family: sans-serif;
+    height: 100%;
 }
 
 header{
     width: 100vw;
-    position: absolute;
+}
+.header-buttons{
+    position: fixed;
+    right: 0px;
+    top: 5px;
 }
 
-main{
-    width: 90vw;
-    margin: 0 auto;
-    padding: 50px 0;
-    background-color: aqua;
 
+main{
+    width: 100vw;
+    margin: 0 auto;
 }
 
 footer{
     background-color: #222222;
+    width: 100vw;
+    position: fixed;
+    bottom: 0;
 }
 
 /*LAYOUT CLASS*/
-.contaniner{
-    width: 100%;
+.container{
+    width: 90%;
+    padding-top: 40px;
     margin: 0 auto;
 }
 
@@ -37,23 +45,40 @@ footer{
 
 .col-14{
     width: calc(100% / 7);
+    min-width: 150px;
+    padding: 20px 5px 0 5px;    
 }
 
+.col-25{
+    width: 25%;
+    background-color: yellowgreen;
+}
+.col-50{
+    width: 50%;
+    background-color: antiquewhite;
+}
 
 
 
 /*PAGE STYLES*/
-.content{
-    
-}
 
 .label{
     position: relative;
     bottom: 30px;
     left: 0px; 
+    color: #fff;
+    font-size: 12.5px;
 }
 
 
 .content img{
     width: 100%;
+}
+
+.content{
+    aspect-ratio: 16/9;
+}
+
+.footer-button{
+    align-items: center;
 }
