--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,15 @@ footer{
     width: 100vw;
     position: fixed;
     bottom: 0;
+    display: flex;
+    align-items: center;
 }
 
 /*LAYOUT CLASS*/
 .container{
-    width: 90%;
+    width: 92.5%;
     padding-top: 80px;
-    margin: 0 auto;
+    margin: 0 auto 100px auto;
 }
 
 .row{
@@ -53,7 +55,7 @@ footer{
 
 .col-14{
     width: calc(100% / 7);
-    min-width: 150px;
+    min-width: 200px;
 }
 
 .col-25{
@@ -61,6 +63,11 @@ footer{
 }
 .col-50{
     width: 50%;
+}
+
+.col-50, .col-25{
+    display: flex;
+    align-items: center;
 }
 
 
@@ -77,6 +84,10 @@ footer{
     padding: 5px;
     display: inline-block;
 }
+.container-footer{
+    width: 100vw;
+}
+
 .content img{
     width: 100%;
     height: 100%;
@@ -91,10 +102,10 @@ footer{
 }
 
 .align-center{
-    text-align: center;
+    justify-content: center;
 }
 .align-end{
-    text-align: end;
+    justify-content: end;
 }
 
 footer button{
@@ -105,9 +116,16 @@ footer button{
 
 .footer-button{
     color: #fff;
+    display: flex;
+    flex-direction: row;
+    margin-right: 5px;
 }
 .icon-footer i{
     font-size: 25px;
+}
+
+.icon-footer i{
+    margin-bottom: 7.5px;
 }
 
 .red{
@@ -115,4 +133,19 @@ footer button{
     font-size: 12.5px;
     padding: 30px 10px;
     background-color: #4A4A4A;
+}
+.red:hover{
+    color: #ff454b;
+}
+
+.green{
+    color: #50C804;
+}
+
+button{
+    cursor: pointer;
+}
+
+footer button:hover{
+    color: #59e004;
 }
